--- a/Contact.html
+++ b/Contact.html
@@ -63,19 +63,19 @@
                 </p>
             </div>
             <div class="form">
-                <label for="hei" style="display: inline;">Name</label>
+                <label for="hei" style="position: relative;left: 2%;">Name</label>
                 <br>
-                <input type="text" name="name" style="width:48% ;height: 15%  ;">
-                <label for="hei" style="display: inline;">E-Mail</label>
+                <input type="text" name="name" style="width:48% ;height: 15%  ;left: 2%; ">
+                <label for="hei" style=" position: relative; top: -5.2%;left: 2%;">E-Mail</label>
                 <br>
-                <input type="email" name="email" style="width:48% ;height: 15%;">
+                <input type="email" name="email" style="width:48% ;height: 15%;position: relative; top: -5.2%;">
                 <br>
-                <label for="hei" style="display: inline;">Subject</label>
+                <label for="hei" style="position: relative;left: 2%;">Subject</label>
                 <br>
                 <input type="text" name="Subject" style="width:48% ;height: 15%;">
-                <p style="display:inline ;">Budget</p>
+                <p style="position: relative; top: -5.2%; left: 2%;">Budget</p>
                 <select name="Budget" id=""
-                    style="width:48% ;height: 15% ; background-color: rgb(236, 235, 235); border-radius: 1%; margin-left: 2%;">
+                    style="width:48% ;height: 15% ; background-color: rgb(236, 235, 235); border-radius: 1%; margin-left: 2%;position: relative; top: -5.2%;">
                     <option value=""> 0$ - 10.000$</option>
                     <option value="">10.000$ - 100.000$ </option>
                     <option value="">100.000$ - 50.000$</option>
